# CLionProject

./: CMakeLists.txt
headers/: game.h  graphics.h
src/: game.cpp  graphics.cpp  main.cpp
